Révisions pour édition 2023
Mise à jour des supports pour la 2e édition de la formation du (29.11.2023)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -73,4 +73,5 @@ nav:
   - Ateliers:
     - ateliers/atelier-1.md
     - ateliers/atelier-2.md
+    - ateliers/atelier-3.md
   - Crédits: credits.md
